--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1586,107 +1586,107 @@ stories:
   domain: http://www.journalrecord.com/
   link: https://journalrecord.com/2019/12/27/embark-offers-free-transit-on-new-years-eve/
 images:
-- name: oldhousecars-house-old-cars-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-clean-view.jpg
-- name: dragon_close-up-wave.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-wave.jpg
-- name: legal-statue-legalstatue-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-atari-missle.jpg
-- name: mosaic-face-mosaic-face-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-marcel-duchamp.jpg
-- name: capital-battle-capitolbattle-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-rain.jpg
-- name: fence-mexico-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-light-dali.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-horiz-circuit.jpg
-- name: subway-subway-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-neo-instinct.jpg
-- name: catacombs-catacombs-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-5.jpg
-- name: rockingchair-rockingchair-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crabapple.jpg
-- name: christianity-christianity-under-construction-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-horiz-circuit.jpg
-- name: supreme-court-supremecourt-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-circuit.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-cinnamon-rolls.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-cinnamon-rolls.png
-- name: machine-road-machine-road-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-spagetti-accident.jpg
-- name: dc-statue-dcstatue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue.jpg
-- name: oldhouse-oldhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crafty-painting.jpg
-- name: liberty-back-statue-liberty-back-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-yellow-paper.jpg
-- name: old-door-lock-old-door-lock-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-plentiful.jpg
-- name: gypsy-wagon-gypsywagon-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-brush.jpg
-- name: copper-circuit-IMG_8494.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_8494.jpg
-- name: nazi-invasion-water-fountain-many-shooting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-water-fountain-many-shooting.jpg
-- name: wall-cannon-wall-cannon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-dark-dali.jpg
-- name: old-cabin-oldcabin-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-space-pizza.jpg
-- name: oldroad-old-road-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-gred-mash.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
-- name: downtown-los-angeles-downtown-la-crabapple.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-crabapple.JPG
-- name: nazi-invasion-statue-with-shield-dark.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-with-shield-dark.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-crabapple.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crabapple.JPG
-- name: old-barn-old-barn-1500-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-satan-red.jpg
-- name: fence-mexico-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dali-two.jpg
-- name: abe-lincoln-one-smooth-ride-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-00-00.jpg
-- name: oldcabin-oldcabin-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-alien-goggles.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
-- name: rockingchair-rockingchair-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-alien-goggles.jpg
-- name: containership-containership-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-atari-missle.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-post-modern.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-post-modern.JPG
-- name: sand-hand-sand-hand-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-copper-circuit.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-clean-view.jpg
-- name: stalin-time-los-angeles-downtown-from-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-los-angeles-downtown-from-afar.jpg
-- name: bordercrossing-bordercrossing-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smoking-cigarette.jpg
-- name: powerlines-power-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-dali.jpg
-- name: copper-circuit-san-francisco-lights-skyline.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-lights-skyline.jpg
-- name: walled-garden-walled-garden-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-feed-people.jpg
-- name: stalin-time-eagle-spread-tree-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-eagle-spread-tree-2.jpg
-- name: stories-machine-road-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-light-dali.jpg
-- name: ellis-island-ellisisland-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-green-zuma.jpg
-- name: mosaic-face-mosaic-face-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dark-rain.jpg
-- name: aws-s3-square-97-193-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-97-193-800-500-0-max-0-1--1.jpg
-- name: status-berlin-status-berlin-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-constitution.jpg
-- name: miamibeach-miamibeach-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dark-rain.jpg
+- name: fence-fence-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-internet-numbers.jpg
+- name: gypsy-wagon-gypsywagon-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-really-hot.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+- name: la-muse-close-to-all-remote-aircraft.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-close-to-all-remote-aircraft.jpg
+- name: beach-clouds-lifeguard-beachclouds-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-aqua.jpg
+- name: nyc-flag-nycflag-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-sunday.jpg
+- name: adam-smith-adam-smith-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-wols.jpg
+- name: subway-subway-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-mucha-mult.jpg
+- name: docks-docks-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-nazi-poster.jpg
+- name: nazi-invasion-IMG_4833.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4833.jpg
+- name: stalin-time-shipping-container-ship-sunny-day.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-shipping-container-ship-sunny-day.jpg
+- name: aws-s3-square-C106VpCVQAEkHqy-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C106VpCVQAEkHqy-square.jpg
+- name: oldcabin-store-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-plentiful.jpg
+- name: stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
+- name: bf-skinner-gears-pipes-plumbing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-gears-pipes-plumbing.jpg
+- name: crow_really_hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_really_hot.jpg
+- name: mosaic-face-mosaic-face-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-china-prop.jpg
+- name: san-francisco-street-view-san-francisco-street-view-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-sunday.jpg
+- name: oldhousecars-house-old-cars-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-creativity.jpg
+- name: old-cabin-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-really-hot.jpg
+- name: old-church-oldchurch-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-yellow-collage.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
+- name: stalin-time-train-coming-up-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-coming-up-tracks.jpg
+- name: old-granary-field-granaryfield-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-brush.jpg
+- name: legal-statue-legalstatue-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-wols.jpg
+- name: nazi-invasion-wild-gease-in-the-water.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-wild-gease-in-the-water.jpg
+- name: bf-skinner-please-do-not-feed-the-pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-please-do-not-feed-the-pigeon.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-5.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-atari-missle.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-free-woman.jpg
+- name: stalin-time-stairs-down-blue-green.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-stairs-down-blue-green.jpg
+- name: machine-road-machine-road-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-internet-numbers.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
+- name: birdhouse-birdhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-deep-connections.jpg
+- name: bf-skinner-close-to-all-remote-aircraft.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-close-to-all-remote-aircraft.jpg
+- name: old-door-lock-old-door-lock-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-sunday.jpg
+- name: nazi-invasion-glass-ball-downtown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-glass-ball-downtown.jpg
+- name: catacombs-catacombs-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-purp-paper.jpg
+- name: mistywoods-babyfoot-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-colorful-blocks.jpg
+- name: bordercrossing-bordercrossing-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sand-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-neo-instinct.JPG
+- name: berlinwall-DSC-0084-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-graham-sutherland.jpg
+- name: catacombs-catacombs-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-3.jpg
+- name: rockingchair-face-2-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-blue-brush.jpg
+- name: oldsmallboat-oldsmallboat-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-gred-mash.jpg
+- name: bf-skinner-screaming-face-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-screaming-face-statue.jpg
+- name: apartment-window-apartment-window-leaves-underpainting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/apartment-window-apartment-window-leaves-underpainting.jpg
+- name: fence-fence-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-rain.jpg
+- name: stories-new-80-87-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-80-87-800-500-0-max-0--1--1.jpg
+- name: old-school-house-old-schoolhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-deep-connections.jpg
+- name: border-fence-border-fence-on-hill-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-light-dali.jpg
 ---
 Harley Quinn Looks 'a Little Bit Crazy' In Birds Of Prey.&nbsp;Louisville Wants Payback Vs Mississippi State At Music City.&nbsp;Madison Hughes Weds Jesse Straus.&nbsp;Burrow And Hurts Meet In Semifinal Showdown.&nbsp;Eating Insects For The Good Of The Planet.&nbsp;Pelican Brewing Hosts Nerding In The New Year Event.&nbsp;Better Balance For Every Day.&nbsp;Trained Or Not, Dogs Can Count.&nbsp;
